# Computer-Simulation-S10-2021

./: .gitignore  README.md  document.bash  index.html
annealing/: Cargo.toml
annealing/annealing/: Cargo.toml
annealing/src/: main.rs
harmonics/: Cargo.toml  Manifest.toml  Project.toml  clippy.toml  crates.js  search-index.js  settings.html  source-files.js
harmonics/.cargo/: config.toml
harmonics/annealing/: all.html  enum.APF.html  enum.NeighbourMethod.html  enum.Schedule.html  enum.Status.html  index.html  sidebar-items.js  struct.SA.html  type.Bounds.html  type.CustomStatus.html  type.Point.html
harmonics/assets/: katex-header.html
harmonics/gsl_sys/: all.html  constant.CBLAS_DIAG_CblasNonUnit.html  constant.CBLAS_DIAG_CblasUnit.html  constant.CBLAS_ORDER_CblasColMajor.html  constant.CBLAS_ORDER_CblasRowMajor.html  constant.CBLAS_SIDE_CblasLeft.html  constant.CBLAS_SIDE_CblasRight.html  constant.CBLAS_TRANSPOSE_CblasConjTrans.html  constant.CBLAS_TRANSPOSE_CblasNoTrans.html  constant.CBLAS_TRANSPOSE_CblasTrans.html  constant.CBLAS_UPLO_CblasLower.html  constant.CBLAS_UPLO_CblasUpper.html  constant.GSL_BST_AVL_MAX_HEIGHT.html  constant.GSL_BST_RB_MAX_HEIGHT.html  constant.GSL_COMPLEX_LEGACY.html  constant.GSL_CONST_CGSM_ANGSTROM.html  constant.GSL_CONST_CGSM_BAR.html  constant.GSL_CONST_CGSM_BARN.html  constant.GSL_CONST_CGSM_CARAT.html  constant.GSL_CONST_CGSM_DYNE.html  constant.GSL_CONST_CGSM_ERG.html  constant.GSL_CONST_CGSM_HECTARE.html  constant.GSL_CONST_CGSM_JOULE.html  constant.GSL_CONST_CGSM_LAMBERT.html  constant.GSL_CONST_CGSM_LITER.html  constant.GSL_CONST_CGSM_LUMEN.html  constant.GSL_CONST_CGSM_LUX.html  constant.GSL_CONST_CGSM_METRIC_TON.html  constant.GSL_CONST_CGSM_MICRON.html  constant.GSL_CONST_CGSM_MINUTE.html  constant.GSL_CONST_CGSM_NEWTON.html  constant.GSL_CONST_CGSM_PHOT.html  constant.GSL_CONST_CGSM_POISE.html  constant.GSL_CONST_CGSM_RAD.html  constant.GSL_CONST_CGSM_STILB.html  constant.GSL_CONST_CGSM_STOKES.html  constant.GSL_CONST_CGS_ANGSTROM.html  constant.GSL_CONST_CGS_BAR.html  constant.GSL_CONST_CGS_BARN.html  constant.GSL_CONST_CGS_CARAT.html  (+5948 more)
harmonics/harmonics/: all.html  index.html  sidebar-items.js
harmonics/num/: fn.one.html  fn.pow.html  fn.range.html  fn.range_inclusive.html  fn.zero.html  index.html  struct.Complex.html  trait.Bounded.html  trait.CheckedMul.html  trait.NumCast.html  trait.One.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html  type.BigRational.html  type.Rational32.html  type.Rational64.html
harmonics/num_complex/: struct.Complex.html  struct.ParseComplexError.html
harmonics/num_iter/: fn.range_from.html  fn.range_step_from.html  struct.RangeFrom.html  struct.RangeStepFrom.html
harmonics/num_rational/: all.html  index.html  struct.Ratio.html  type.BigRational.html
harmonics/numeric_literals/: attr.replace_float_literals.html  attr.replace_int_literals.html  index.html
harmonics/rand/: trait.CryptoRng.html  trait.RngCore.html  trait.SeedableRng.html
harmonics/rand_distr/: all.html  enum.BetaError.html  enum.ChiSquaredError.html  enum.DirichletError.html  enum.FrechetError.html  enum.GammaError.html  enum.GumbelError.html  enum.InverseGaussianError.html  enum.NormalError.html  enum.NormalInverseGaussianError.html  enum.ParetoError.html  enum.TriangularError.html  enum.WeightedError.html  index.html  struct.Standard.html  trait.Distribution.html
harmonics/rgsl/: all.html  enum.CblasDiag.html  enum.CblasOrder.html  enum.CblasSide.html  enum.CblasTranspose.html  enum.CblasUplo.html  enum.EigenSort.html  enum.FftDirection.html  enum.GaussKronrodRule.html  enum.IntegrationQawo.html  enum.Mode.html  enum.ODEiv.html  enum.SfLegendreNorm.html  enum.Value.html  enum.VegasMode.html  enum.WaveletDirection.html  index.html  sidebar-items.js  static.DBL_EPSILON.html  static.DBL_MAX.html  static.DBL_MIN.html  static.LOG_DBL_MAX.html  static.ROOT3_DBL_EPSILON.html  static.ROOT3_DBL_MAX.html  static.ROOT3_DBL_MIN.html  static.ROOT4_DBL_EPSILON.html  static.ROOT4_DBL_MAX.html  static.ROOT4_DBL_MIN.html  static.ROOT5_DBL_EPSILON.html  static.ROOT5_DBL_MAX.html  static.ROOT5_DBL_MIN.html  static.ROOT6_DBL_EPSILON.html  static.ROOT6_DBL_MAX.html  static.ROOT6_DBL_MIN.html  static.SF_DOUBLEFACT_NMAX.html  static.SF_FACT_NMAX.html  static.SF_GAMMA_XMAX.html  static.SF_MATHIEU_COEFF.html  static.SQRT_DBL_EPSILON.html  static.SQRT_DBL_MAX.html  (+2 more)
harmonics/scripts/: animate.jl  plot.jl
harmonics/src/: cli.rs  main.rs  write.rs
harmonics/syn/: enum.GenericMethodArgument.html  enum.Member.html  enum.RangeLimits.html  index.html  struct.Arm.html  struct.ExprArray.html  struct.ExprAssign.html  struct.ExprAssignOp.html  struct.ExprAsync.html  struct.ExprAwait.html  struct.ExprBinary.html  struct.ExprBlock.html  struct.ExprBox.html  struct.ExprBreak.html  struct.ExprCall.html  struct.ExprCast.html  struct.ExprClosure.html  struct.ExprContinue.html  struct.ExprField.html  struct.ExprForLoop.html  struct.ExprGroup.html  struct.ExprIf.html  struct.ExprIndex.html  struct.ExprLet.html  struct.ExprLit.html  struct.ExprLoop.html  struct.ExprMacro.html  struct.ExprMatch.html  struct.ExprMethodCall.html  struct.ExprParen.html  struct.ExprPath.html  struct.ExprRange.html  struct.ExprReference.html  struct.ExprRepeat.html  struct.ExprReturn.html  struct.ExprStruct.html  struct.ExprTry.html  struct.ExprTryBlock.html  struct.ExprTuple.html  struct.ExprType.html  (+13 more)
sitnikov/: Cargo.toml  Manifest.toml  Project.toml  crates.js  search-index.js  settings.html  source-files.js
sitnikov/.config/: nextest.toml
sitnikov/bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  index.html  (+7 more)
(+15796 files in other folders)
