[package]
name = "annealing-test"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.59"
description = "Testing the simulated annealing algorithm"
documentation = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
readme = "README.md"
homepage = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
repository = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
license-file = "LICENSE.md"
keywords = ["astronomy", "simulation"]
categories = ["simulation", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true

[dependencies]
annealing = { path = "annealing" }
anyhow = { version = "=1.0.56", features = ["backtrace"] }
clap = { version = "=3.1.8", features = ["derive"] }

[workspace]

members = [
    "annealing",
]
