[package]
name = "sitnikov"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.59"
description = "Simulating the Sitnikov problem"
documentation = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
readme = "README.md"
homepage = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
repository = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
license-file = "LICENSE.md"
keywords = ["astronomy", "simulation"]
categories = ["command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true

[dependencies]
anyhow = { version = "=1.0.55", features = ["backtrace"] }
bincode = "=1.3.3"
clap = { version = "=3.1.2", features = ["derive"] }
paste = "=1.0.6"
