[package]
name = "sitnikov"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.59"
description = "Simulating the Sitnikov problem"
documentation = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
readme = "README.md"
homepage = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
repository = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
license-file = "LICENSE.md"
keywords = ["astronomy", "simulation"]
categories = ["simulation", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true

[dependencies]
anyhow = { version = "=1.0.56", features = ["backtrace"] }
bincode = "=1.3.3"
clap = { version = "=3.1.6", features = ["derive"] }
lazy_static = "=1.4.0"
num = "=0.4.0"
numeric_literals = "=0.2.0"
paste = "=1.0.6"
rand = "=0.8.5"
rand_distr = "=0.4.3"
rand_xoshiro = "=0.6.0"
serde = "=1.0.136"
integrators = { path = "integrators" }

[workspace]

members = [
    "integrators",
]
