[package]
name = "annealing"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.59"
description = "Providing an interface for global optimization using simulated annealing"
documentation = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
readme = "README.md"
homepage = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
repository = "https://github.com/paveloom-university/Computer-Simulation-S10-2022"
license-file = "LICENSE.md"
keywords = ["search", "optimization"]
categories = ["mathematics"]

[dependencies]
anyhow = "=1.0.56"
itertools = "=0.10.3"
num = "=0.4.0"
numeric_literals = "=0.2.0"
rand = "=0.8.5"
rand_distr = "=0.4.3"
rand_xoshiro = "=0.6.0"
